Fixed Validation Fields

--- a/index.html
+++ b/index.html
@@ -56,8 +56,9 @@
             /><button type="submit" class="submit">
               <img src="./images/icon-arrow.svg" alt="" />
             </button>
+            <i class="error-icon hidden"><img src="./images/icon-error.svg" alt=""></i>
           </div>
-          <span class="validation"></span>
+          <span class="validation hidden"></span>
         </form>
       </main>
       <!-- end main content layout -->
